ensure proper alignment of activity in mobile web

--- a/assets/stylesheets/previews_mobile.scss
+++ b/assets/stylesheets/previews_mobile.scss
@@ -8,6 +8,7 @@
   }
   div + .topic-details {
     padding-left: 10px;
+    min-height: 45px;
   }
   .topic-excerpt {
     margin-top: 5px;
